# re-formality

./: .gitignore  CONTRIBUTING.md  package.json  re-formality-ppx.opam  windows-examples.patch
.github/workflows/: ci.yml
examples/: package.json  rescript.json
examples/src/: Api.res  BlogPostForm.res  Cx.res  Form.res  LoginForm.res  SignupForm.res
lib/: package.json  rescript.json
ppx/lib/: AstHelpers.ml  Form_InitialFieldsStatusesFn.ml  Form_UseFormFn_CollectionsActions.ml  Form_ValidateFormFn.ml  Form_ValidatorsRecord.ml  Uncurried.ml
ppx/test/: Case.ml
ppx/test/cases/: Ok__CollectionWithCollectionValidatorAndFieldOfCollectionWithAsyncValidatorInOnBlurMode.res  Ok__CollectionWithCollectionValidatorAndFieldOfCollectionWithAsyncValidatorInOnChangeMode.res  Ok__CollectionWithNoCollectionValidatorAndFieldOfCollectionWithAsyncValidatorInOnBlurMode.res  Ok__CollectionWithNoCollectionValidatorAndFieldOfCollectionWithAsyncValidatorInOnChangeMode.res  Ok__FieldWithAsyncValidatorInOnBlurMode.res  Ok__FieldWithAsyncValidatorInOnChangeMode.res  Ok__FieldWithSyncValidatorAndFieldWithAsyncValidatorInOnBlurMode.res  Ok__FieldWithSyncValidatorAndFieldWithAsyncValidatorInOnChangeMode.res  Ok__LargeFormWithValidators.res  Ok__Metadata.res  Ok__TwoFieldsWithAsyncValidatorsInOnBlurMode.res  Ok__TwoFieldsWithAsyncValidatorsInOnChangeMode.res  Ok__TwoFieldsWithSyncValidatorAndFieldWithAsyncValidatorInOnBlurMode.res  Ok__TwoFieldsWithSyncValidatorAndFieldWithAsyncValidatorInOnChangeMode.res
ppx/test/script/: var
specs/: cypress.config.mjs  package.json  vite.config.mjs
